Added more tags to structure. Document validated on w3c with no errors or warnings

--- a/resume.html
+++ b/resume.html
@@ -1,10 +1,17 @@
-<!DOCTYPE HTML5>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<title>Shameemah Fuseini-Codjoe:Resume</title>
 		<meta charset="utf-8" />
 	</head>
 	<body>
-	
+		<section>
+			<header>
+				<h1>Resume</h1>
+			</header>
+			
+			<footer>
+			</footer>
+		</section>
 	</body>
 </html>
