Added <nav> and contact information

--- a/resume.html
+++ b/resume.html
@@ -9,8 +9,22 @@
 			<header>
 				<h1>Resume</h1>
 			</header>
-				<h2>Shameemah Fuseini-Codjoe</h2>
+				<!-- Contact info -->
+				<section>
+					<h2>Shameemah Fuseini-Codjoe</h2>
+					<p>(678)515-6050</p>
+					<p>sfuseini@hawk.iit.edu</p>
+					<p>2954 S Michigan Ave</p>
+					<p>Chicago, IL 60616</p>
+				</section>
 				
+				<nav>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Resume</a></li>
+						<li><a href="#">Portfolio</a></li>
+					</ul>
+				</nav>
 				<!-- Education setion of resume -->
 				<section>
 					<h3>EDUCATION</h3>
