Removed line from Goals and Aspirations

--- a/about/index.html
+++ b/about/index.html
@@ -54,7 +54,7 @@
         <h2>Goals and Aspirations</h2>
         <p>After college, I hope to own my very own Graphics Design firm. I also hope to start
         a company that focuses on teaching young women in Ghana how to code. In terms of ITM,
-        I am willing to go wherever the wind takes me. (Hint: IBM please hire me.)</p>
+        I am willing to go wherever the wind takes me.</p>
       </section>
     </main>
     
