--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
     <!-- Nav Bar -->
     <nav class="navbar">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="#">Portfolio</a></li>
       </ul>
