Changed home to about

--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
       <!-- Nav Bar -->
       <nav class="navbar">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
           <li><a href="#">Resume</a></li>
           <li><a href="#">Portfolio</a></li>
         </ul>
