--- a/about/index.html
+++ b/about/index.html
@@ -6,18 +6,28 @@
   </head>
   
   <body>
+  
     <header>
       <h1>About Me</h1>
+      <!-- Contact info -->
+      <section class="h-card">
+        <h2 class="p-name">Shameemah Fuseini-Codjoe</h2>
+        <ul class="contact-information">
+          <li class="u-email"><a href="mailto:sfuseini@hawk.iit.edu">sfuseini@hawk.iit.edu</a></li>
+          <li class="u-url"><a href="https://www.linkedin.com/in/shameemah-fuseini-codjoe">LinkedIn Profile</a></li>
+          <li class="p-street-address">2954 S Michigan Ave</li>
+          <li>Chicago, IL 60616</li>
+        </ul>
+      </section>
+      <!-- Nav Bar -->
+      <nav class="navbar">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Portfolio</a></li>
+        </ul>
+      </nav>
     </header>
-    
-    <!-- Nav Bar -->
-    <nav class="navbar">
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Portfolio</a></li>
-      </ul>
-    </nav>
         
     <main>
       <section class="me">
