--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,14 @@
   <body>
     <header>
       <h1>Portfolio</h1>
+      <!-- Nav Bar -->
+      <nav class="navbar">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Portfolio</a></li>
+        </ul>
+      </nav>
     </header>
     
     <main>
