--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>About</title>
-    <meta charset="utf-8" />  
+    <meta charset="utf-8" />
+    <meta name="viewport,initial-scale=1.0,shrink-to-fit=no" />
   </head>
   
   <body>
