--- a/resume/index.html
+++ b/resume/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Resume</title>
     <meta charset="utf-8" />
+    <meta name="viewport,initial-scale=1.0,shrink-to-fit=no" />
   </head>
   
   <body>
