Added meta tag for viewport

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport,initial-scale=1.0,shrink-to-fit=no" />
   </head>
   
   <body>
