Added img/ path

--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
     <main>
       <section class="me">
         <h2>This is me!</h2>
-        <img src="me.jpg" alt="Shameemah Fuseini-Codjoe" />
+        <img src="img/me.jpg" alt="Shameemah Fuseini-Codjoe" />
       </section>
   
       <section class="background">
