Added links to resume, about and portfolio pages

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h1>Shameemah Fuseini-Codjoe</h1>
         <nav class="navbar">
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/resume">Resume</a></li>
+            <li><a href="/portfoilo">Portfolio</a></li>
           </ul>
         </nav>
     </header>
