--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <ul>
             <li><a href="/about">About</a></li>
             <li><a href="/resume">Resume</a></li>
-            <li><a href="/portfoilo">Portfolio</a></li>
+            <li><a href="/portfolio">Portfolio</a></li>
           </ul>
         </nav>
     </header>
