--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,9 +12,10 @@
       <!-- Nav Bar -->
       <nav class="navbar">
         <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Resume</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/resume">Resume</a></li>
+          <li><a href="/portfolio">Portfolio</a></li>
         </ul>
       </nav>
     </header>
