Included figure and figcaption tags

--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,11 @@
     <main>
       <section class="me">
         <h2>This is me!</h2>
-        <img src="img/me.jpg" alt="Shameemah Fuseini-Codjoe" />
+        <figure>
+          <img src="img/me.jpg" alt="Shameemah Fuseini-Codjoe" />
+          <figcaption>A selfie of me at the 2015 ASO Annual Banquet</figcaption>
+        </figure>
+        
       </section>
   
       <section class="background">
