Added video to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Portfolio</title>
     <meta charset="utf-8" />
@@ -213,12 +213,27 @@
           </li>
         </ul>
       </section>
+      
+      <section class="poetry">
+        <h2>Poetry</h2>
+        <figure>
+          <video controls="controls">
+            <source src="video/Poem.mp4" type="video/mp4" />
+            <source src="video/Poem.webm" type="video/webm" />
+            <source src="video/Poem.ogv" type="video/ogg" />
+            <p>
+            Download the video in <a href="video/Poem.mp4">MPEG</a>format.
+            </p>
+          </video>
+          <figcaption>A poem I wrote about my beloved continent and home, Africa.</figcaption>
+        </figure>
+      </section>
 
     </main>
     
     <footer>
       Site design by Shameemah Fuseini-Codjoe.
-      All paintings and designs by Shameemah Fuseini-Codjoe.
+      All paintings, designs and poetry by Shameemah Fuseini-Codjoe.
       Copyright © Shameemah Fuseini-Codjoe All rights reserved.
     </footer>
   </body>
