Made minor spacing changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <header>
+    <header class="header">
       <h1>Shameemah Fuseini-Codjoe</h1>
         <nav class="navbar">
           <ul>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     
-    <footer>
+    <footer class="footer">
       Site Design by Shameemah Fuseini-Codjoe
       Copyright © Shameemah Fuseini-Codjoe All rights reserved.
     </footer>
