--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,12 @@
     <title>Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <style>
+      video
+      {
+        max-width: 100%;
+      }
+    </style>
   </head>
   
   <body>
