Made structural changes to HTML

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
   
   <body>
     <header class="header">
-      <h1>Portfolio</h1>
+      <h1>Shameemah Fuseini-Codjoe</h1>
       <!-- Nav Bar -->
       <nav class="navbar">
         <ul>
