--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
       <section class="aboutme">
         <h2>This is me!</h2>
         <figure class="mypicture">
-          <img src="img/me.jpg" alt="Shameemah Fuseini-Codjoe" />
+          <img src="../img/me-500-0.jpg" alt="Shameemah Fuseini-Codjoe" />
           <figcaption>A selfie of me at the 2015 ASO Annual Banquet</figcaption>
         </figure>
       </section>
