--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
     <main class="main">
       <section class="aboutme">
         <h2>This is me!</h2>
-        <figure class="mypicture">
+        <figure id="mypicture">
           <img src="../img/me-500-0.jpg" alt="Shameemah Fuseini-Codjoe" />
           <figcaption>A selfie of me at the 2015 ASO Annual Banquet</figcaption>
         </figure>
