Changed linkedin label

--- a/about/index.html
+++ b/about/index.html
@@ -16,14 +16,14 @@
           <ul class="contact-information">
             <li id="school">Student at Illinois Institute of Technology</li>
             <li class="u-email"><a href="mailto:sfuseini@hawk.iit.edu">sfuseini@hawk.iit.edu</a></li>
-            <li class="u-url"><a href="https://www.linkedin.com/in/shameemah-fuseini-codjoe">LinkedIn Profile</a></li>
+            <li class="u-url"><a href="https://www.linkedin.com/in/shameemah-fuseini-codjoe">LinkedIn</a></li>
           </ul>
         </section>
         <!-- Nav Bar -->
         <nav id="navbar">
           <ul>
             <li><a href="/about">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li id="active"><a href="/about">About</a></li>
             <li><a href="/resume">Resume</a></li>
             <li><a href="/portfolio">Portfolio</a></li>
           </ul>
