--- a/about/index.html
+++ b/about/index.html
@@ -10,29 +10,31 @@
   <body>
     <div id="page">
       <header class="header">
-        <!-- Contact info -->
-        <section class="h-card">
-          <h1 class="p-name"><a href="/index.html">Shameemah Fuseini-Codjoe</a></h1>
-          <ul class="contact-information">
-            <li id="school">Student at Illinois Institute of Technology</li>
-            <li class="u-email"><a href="mailto:sfuseini@hawk.iit.edu">sfuseini@hawk.iit.edu</a></li>
-            <li class="u-url"><a href="https://www.linkedin.com/in/shameemah-fuseini-codjoe">LinkedIn</a></li>
-          </ul>
-        </section>
-        <!-- Nav Bar -->
+      <!-- Nav Bar -->
         <nav id="navbar">
           <ul>
+          	<li><a href="/portfolio">Portfolio</a></li>
+          	<li><a href="/resume">Resume</a></li>
+          	<li id="active"><a href="/about">About</a></li>
             <li><a href="/about">Home</a></li>
-            <li id="active"><a href="/about">About</a></li>
-            <li><a href="/resume">Resume</a></li>
-            <li><a href="/portfolio">Portfolio</a></li>
           </ul>
         </nav>
+        <!-- Contact info -->
+        <section class="bio">
+          <h1><a href="/about">About Me</a></h1>
+          <ul class="shortbio">
+            <li id="school">Student at Illinois Institute of Technology</li>
+            <li class="summary">Aspiring UI/UX designer and Software Developer</li>
+            <li class="summary">Artist on the holidays</li>
+            <li class="summary">Writer at night</li>
+            <li id="scroll"><a href="#scrolldown">Scroll down to see more</a></li>
+          </ul>
+        </section>
       </header>
         
       <main class="main">
         <figure id="mypicture">
-          <img src="../img/shameemah-2345-30.jpg" alt="Shameemah Fuseini-Codjoe" />
+          <img id="scrolldown" src="../img/shameemah-2345-30.jpg" alt="Shameemah Fuseini-Codjoe" />
           <figcaption>Me at Venice Beach in Los Angeles</figcaption>
         </figure>
   
