--- a/about/index.html
+++ b/about/index.html
@@ -66,7 +66,7 @@
         <section class="goals">
           <h2>Goals and Aspirations</h2>
           <p>
-          After college, I hope to own my very own Graphics Design firm. I also hope to start
+          After college, I hope work with a top technology firm that bridges the gap between art and technology. In the long term, I hope to own my very own Graphics Design firm and to start
           a company that focuses on teaching young women in Ghana how to code. In terms of ITM,
           I am willing to go wherever the wind takes me.
           </p>
