Fixed tabbing issues. Added more content.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <!-- Nav Bar -->
         <nav id="navbar">
           <ul>
-          	<li><a href="/portfolio">Portfolio</a></li>
-          	<li><a href="/resume">Resume</a></li>
-          	<li id="active"><a href="/about">About</a></li>
+            <li><a href="/portfolio">Portfolio</a></li>
+            <li><a href="/resume">Resume</a></li>
+            <li id="active"><a href="/about">About</a></li>
             <li><a href="/index.html">Home</a></li>
           </ul>
         </nav>
@@ -37,6 +37,10 @@
           <h2>Overview</h2>
           <p>
           Welcome to my first website! This website contains my digital portfolio, resume and a little information about who I am. In the future, I hope to include a blog and a photography page. For anyone interested in the technical tools used to build the website, the Github repository lives <a id="github" href="https://github.com/Shameemah/Project-2--Responsive-Relative-Unit-CSS">here.</a> 
+          </p>
+          <h2>Contact me</h2>
+          <p>
+          The easiest way to contact me is through various social media platforms. I am active on <a class="socialmedia" href="https://www.facebook.com/shameemah.fuseinicodjoe">Facebook</a>, <a class="socialmedia" href="https://twitter.com/Shameemah__">Twitter</a>, and <a class="socialmedia" href="https://www.tumblr.com/blog/shameemahcodjoe">Tumblr</a>. However, if none of these work for you, feel free to shoot me an <a class="socialmedia" href="mailto:sfuseini@hawk.iit.edu">email</a>! Don't be a stranger. 
           </p>
         </section>
       </main>
