Included more content and correct tabbing issues

--- a/about/index.html
+++ b/about/index.html
@@ -13,9 +13,9 @@
       <!-- Nav Bar -->
         <nav id="navbar">
           <ul>
-          	<li><a href="/portfolio">Portfolio</a></li>
-          	<li><a href="/resume">Resume</a></li>
-          	<li id="active"><a href="/about">About</a></li>
+            <li><a href="/portfolio">Portfolio</a></li>
+            <li><a href="/resume">Resume</a></li>
+            <li id="active"><a href="/about">About</a></li>
             <li><a href="/index.html">Home</a></li>
           </ul>
         </nav>
@@ -39,11 +39,12 @@
           I was born and raised in Ghana, a beautiful country in West Africa, with one older
           sister, my mother and father. After completing my high school education at SOS 
           Hermann Gmeiner International College in 2014, I moved to the USA for college. I 
-          initially started out as an Architecture and switched to Information Technology 
+          initially started out as an Architecture major and switched to Information Technology 
           and Management after a year. In my opinion, this was one of the best decisions I've 
-          ever made. I am currently pursuing both my bachelors and masters in ITM with a 
+          ever made. I am currently pursuing both my bachelors and masters in Information Technology 
+          and Management with a 
           specialization in Software Development and Data management respectively. I
-          work as a freelance Graphic Designer in my free time. 
+          work as a freelance Graphic Designer and UI designer in my free time You can see examples of the work I have done on my <a class="socialmedia" href="/portfolio">portfolio page</a>. 
           </p>
         </section>
         
@@ -56,19 +57,18 @@
           <h2>Hobbies</h2>
           <ul class="hobbylist">
             <li>Painting</li>
-            <li>Writing</li>
-            <li>Binge watching shows on Netflix</li>
             <li>Coding</li>
             <li>Designing logos, posters, flyers, etc.</li>
+            <li>Writing poetry</li>
+            <li>Reading poetry (especially by Warsan Shire, Maya Angelou and Nayyirah Waheed)</li>
+            <li>Binge watching shows on Netflix (Michael Scott from 'The Office' is my favorite)</li>
           </ul>
         </section>
     
         <section class="goals">
           <h2>Goals and Aspirations</h2>
           <p>
-          After college, I hope work with a top technology firm that bridges the gap between art and technology. In the long term, I hope to own my very own Graphics Design firm and to start
-          a company that focuses on teaching young women in Ghana how to code. In terms of ITM,
-          I am willing to go wherever the wind takes me.
+          It has always been my dream to start a school that aims at giving young women in Africa free education in the Technology sector. This is my longterm goal and is what I am working hard towards. However, after graduating from college, I hope work with a top technology firm that bridges the gap between art and technology. I believe that most people see these 2 sectors as completely different things. However, companies like Adobe prove that it is possible to merge the two. Although I have very specific goals and aspirations, I am willing to go wherever he wind takes me.
           </p>
         </section>
       </main>
