Changed path of video

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -227,9 +227,9 @@
           <h2>Poetry</h2>
           <figure>
             <video controls="controls">
-              <source src="video/Poem.mp4" type="video/mp4" />
-              <source src="video/Poem.webm" type="video/webm" />
-              <source src="video/Poem.ogv" type="video/ogg" />
+              <source src="../vid/Poem.mp4" type="video/mp4" />
+              <source src="../vid/Poem.webm" type="video/webm" />
+              <source src="../vid/Poem.ogv" type="video/ogg" />
               <p>
               Download the video in <a href="video/Poem.mp4">MPEG</a>format.
               </p>
