--- a/about/index.html
+++ b/about/index.html
@@ -68,7 +68,7 @@
         <section class="goals">
           <h2>Goals and Aspirations</h2>
           <p>
-          It has always been my dream to start a school that aims at giving young women in Africa free education in the Technology sector. This is my longterm goal and is what I am working hard towards. However, after graduating from college, I hope work with a top technology firm that bridges the gap between art and technology. I believe that most people see these 2 sectors as completely different things. However, companies like Adobe prove that it is possible to merge the two. Although I have very specific goals and aspirations, I am willing to go wherever he wind takes me.
+          It has always been my dream to start a school that aims at giving young women in Africa free education in the Technology sector. This is my longterm goal and is what I am working hard towards. However, after graduating from college, I hope to work with a top technology firm that bridges the gap between art and technology. I believe that most people see these 2 sectors as completely different things. However, companies like Adobe prove that it is possible to merge the two. Although I have very specific goals and aspirations, I am willing to go wherever the wind takes me.
           </p>
         </section>
       </main>
