Included scroll down id

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,7 @@
           </section>
         </header>
     
-      <main class="main">
+      <main id="scrolldown" class="main">
         <section class="ui">
           <h3>UI Design</h3>
           <ul>
