--- a/resume/index.html
+++ b/resume/index.html
@@ -223,7 +223,7 @@
           </ul>
       
           <ul>
-            <li class="date">01/2014 - 06/2014</li>
+            <li class="date">01/2014-06/2014</li>
             <li><h4>Equipment Tracking System</h4></li>
           </ul>
           <ul class="proj-desc">
