--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,7 @@
     <title>Shameemah: Resume</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" media="screen" href="/css/screen.css" />
   </head>
   
