--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
           <p>
           Welcome to my first website! This website contains my digital portfolio, resume and a little information about who I am. In the future, I hope to include a blog and a photography page. For anyone interested in the technical tools used to build the website, the Github repository lives <a id="github" href="https://github.com/Shameemah/Project-2--Responsive-Relative-Unit-CSS">here.</a> 
           </p>
+          
           <h2>Contact me</h2>
           <p>
           The easiest way to contact me is through various social media platforms. I am active on <a class="socialmedia" href="https://www.facebook.com/shameemah.fuseinicodjoe">Facebook</a>, <a class="socialmedia" href="https://twitter.com/Shameemah__">Twitter</a>, and <a class="socialmedia" href="https://www.tumblr.com/blog/shameemahcodjoe">Tumblr</a>. However, if none of these work for you, feel free to shoot me an <a class="socialmedia" href="mailto:sfuseini@hawk.iit.edu">email</a>! Don't be a stranger. 
+          </p>
+          <h2>Acknowledgement</h2>
+          <p>
+         To Professor Karl Stolley for teaching me the importance of responsive-ready HTML and relative-unit CSS, and for constantly giving me great feed back during the process of building this website. To my parents, Musah and Katumi, for funding my education and giving me the opportunity to pursue my dreams, and for constantly encouraging me to reach for the stars. To my sister, Yasmin, for providing me with great feedback on my website design and for reminding me to always keep my head up. And lastly, to my classmates in the ITMD 361 class for their constructive criticism.
           </p>
         </section>
       </main>
