Included more content to home page

--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
           <p>
           Welcome to my first website! This website contains my digital portfolio, resume and a little information about who I am. In the future, I hope to include a blog and a photography page. For anyone interested in the technical tools used to build the website, the Github repository lives <a id="github" href="https://github.com/Shameemah/Project-2--Responsive-Relative-Unit-CSS">here.</a> 
           </p>
-          
-          <h2>Contact me</h2>
+          <h2>My Philosophy</h2>
           <p>
-          The easiest way to contact me is through various social media platforms. I am active on <a class="socialmedia" href="https://www.facebook.com/shameemah.fuseinicodjoe">Facebook</a>, <a class="socialmedia" href="https://twitter.com/Shameemah__">Twitter</a>, and <a class="socialmedia" href="https://www.tumblr.com/blog/shameemahcodjoe">Tumblr</a>. However, if none of these work for you, feel free to shoot me an <a class="socialmedia" href="mailto:sfuseini@hawk.iit.edu">email</a>! Don't be a stranger. 
+         I believe that every individual has the potential to be the best versions of themselves, when surrounded by the right people, and given the right support. I believe in bringing light to the people around you; encourage, support, love, laugh. I believe that every person must learn tolerance and respect in order to live peacefully amongst others, and that we as people, should see every opportunity as a chance to learn and grow. I believe in the empowerment of women and in the disruption of patriarchy. As I go on my journey through life, it is my hope that eventually, I will be able to give back to the communities that made me who I am, and to those who did not have the opportunities I did. I am taking life one step at a time; living, laughing and loving! It is my hope that we will all see the light in life, and that no matter we go through, we will remain unbroken, positive and grateful.
           </p>
           <h2>Acknowledgement</h2>
           <p>
          To Professor Karl Stolley for teaching me the importance of responsive-ready HTML and relative-unit CSS, and for constantly giving me great feed back during the process of building this website. To my parents, Musah and Katumi, for funding my education and giving me the opportunity to pursue my dreams, and for constantly encouraging me to reach for the stars. To my sister, Yasmin, for providing me with great feedback on my website design and for reminding me to always keep my head up. And lastly, to my classmates in the ITMD 361 class for their constructive criticism.
+          </p>
+          <h2>Contact me</h2>
+          <p>
+          The easiest way to contact me is through various social media platforms. I am active on <a class="socialmedia" href="https://www.facebook.com/shameemah.fuseinicodjoe">Facebook</a>, <a class="socialmedia" href="https://twitter.com/Shameemah__">Twitter</a>, and <a class="socialmedia" href="https://www.tumblr.com/blog/shameemahcodjoe">Tumblr</a>. However, if none of these work for you, feel free to shoot me an <a class="socialmedia" href="mailto:sfuseini@hawk.iit.edu">email</a>! Don't be a stranger. 
           </p>
         </section>
       </main>
